RESOLVED FIXED68502
[GTK] Fix build break when enabling webgl on r95593
https://bugs.webkit.org/show_bug.cgi?id=68502
Summary [GTK] Fix build break when enabling webgl on r95593
ChangSeok Oh
Reported 2011-09-20 22:26:10 PDT
a Trivial patch to fix build-break when enabling webgl on revision 95593.
Attachments
patch (2.43 KB, patch)
2011-09-20 23:30 PDT, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2011-09-20 23:30:47 PDT
WebKit Review Bot
Comment 2 2011-09-21 11:18:04 PDT
Comment on attachment 108110 [details] patch Clearing flags on attachment: 108110 Committed r95651: <http://trac.webkit.org/changeset/95651>
WebKit Review Bot
Comment 3 2011-09-21 11:18:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.