[GTK] Fix build break when enabling webgl on r95593 https://bugs.webkit.org/show_bug.cgi?id=68502

Patch by ChangSeok Oh <shivamidow@gmail.com> on 2011-09-21
Reviewed by Martin Robinson.

Add PassOwnPtr.h to GC3DPrivate.h and remove useless one from GC3DGtk.cpp & GC3DPrivate.cpp

No tests required.

* platform/graphics/gtk/GraphicsContext3DGtk.cpp:
* platform/graphics/gtk/GraphicsContext3DPrivate.cpp:
* platform/graphics/gtk/GraphicsContext3DPrivate.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@95651 bbb929c8-8fbe-4397-9dbb-9b2b20218538