third_party/WebKit/Source/WebCore/platform/graphics/gtk/GraphicsContext3DGtk.cpp
@@ -29,7 +29,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "GraphicsContext3D.h"
 
 #if ENABLE(WEBGL)
-#include <wtf/PassOwnPtr.h>
 #include "Extensions3DOpenGL.h"
 #include "GraphicsContext3DPrivate.h"
 #include "OpenGLShims.h"
