third_party/WebKit/Source/WebCore/platform/graphics/gtk/GraphicsContext3DPrivate.cpp
@@ -27,7 +27,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "OpenGLShims.h"
 #include <GL/glx.h>
 #include <dlfcn.h>
-#include <wtf/PassOwnPtr.h>
 
 // We do not want to call glXMakeContextCurrent using different Display pointers,
 // because it might lead to crashes in some drivers (fglrx). We use a shared display
